# allein

./: .gitignore  .prettierrc.json  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  NOTICE  README.md  TESTING_CACHE.md  bump-version.sh  eslint.config.js  index.html  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  logging.rs  main.rs
src/components/: ActivityIndicator.tsx  AlertText.tsx  AppLayout.tsx  ConnectionIndicatorDot.tsx  DelayedActivityIndicator.tsx  DragOverlayTooltip.tsx  Editor.tsx  ErrorFallback.tsx  Hotkey.tsx  MarkdownPreview.tsx  Sidebar.tsx  TauriDragRegion.tsx  ThemeProvider.tsx  ThemeToggle.tsx  Toast.tsx
src/components/layout/: AppLayout.tsx  BaseLayout.tsx  OnboardingLayout.tsx  PageLayout.tsx
src/components/ollama/: AIAssistantConfigPanel.tsx  (+8 more)
src/db/: useConfig.ts  useDatabase.ts  useUpdateConfig.ts
src/hooks/: useDatabase.ts  useInvalidateQueriesOnWindowFocus.ts  useMenuBar.ts  useOllamaModels.ts
src/lib/: constants.ts  formatBytes.ts  queryClient.tsx  types.ts  updater.ts  useCheckForUpdates.ts  useInvalidateQueriesOnWindowFocus.ts  useLocationHistory.ts  useMenuBar.ts  useToast.ts  useWindowState.ts  version.ts
src/ollama/: ollama.ts  useOllamaConnection.ts  useOllamaModels.ts
src/pages/: EditorPage.tsx  SettingsPage.tsx
src/test/: editorMocks.ts
src/types/: sbd.d.ts
(+197 files in other folders)
