[package]
name = "Allein"
version = "0.13.3"
description = "A Markdown editor with built-in Ollama support, offering intelligent auto-completion while working locally."
authors = ["Szilard Doro <doroszilard@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "allein_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
dirs = "5"
tauri-plugin-os = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1.20"
unicode-normalization = "0.1"
